--- a/i18n/en.json
+++ b/i18n/en.json
@@ -26,10 +26,9 @@
 	"citizen-footer-tagline": "Edit this text on [[MediaWiki:Citizen-footer-tagline]]",
 	"citizen-action-addsection": "Add topic",
 	"citizen-jumptotop": "Back to top",
-	
 	"citizen-search-fulltext-empty": "Search for text within pages",
-	
 	"citizen-search-mediasearch-empty": "Search for media",
+	"citizen-search-chatbot-empty": "Ask the chatbot",
 	"citizen-search-empty-desc": "Type to start searching",
 	"citizen-search-noresults-title": "Uh oh! No results for $1",
 	"citizen-search-noresults-desc": "Maybe try the options above?",
